--- a/gluten-ut/spark33/pom.xml
+++ b/gluten-ut/spark33/pom.xml
@@ -83,7 +83,7 @@
         <dependency>
           <groupId>org.apache.arrow</groupId>
           <artifactId>arrow-c-data</artifactId>
-          <version>${arrow-gluten.version}</version>
+          <version>${arrow.version}</version>
           <scope>test</scope>
           <exclusions>
             <exclusion>
