--- a/gluten-ut/spark35/pom.xml
+++ b/gluten-ut/spark35/pom.xml
@@ -95,7 +95,7 @@
         <dependency>
           <groupId>org.apache.arrow</groupId>
           <artifactId>arrow-c-data</artifactId>
-          <version>${arrow-gluten.version}</version>
+          <version>${arrow.version}</version>
           <scope>test</scope>
           <exclusions>
             <exclusion>
